egonlang-core/res/examples/invalid/const_decl_typed_without_assign.eg
const a: number;

// out: SyntaxError: const `a` missing value. consts must be declared with a value